# exify

./: .gitignore  Makefile  README.md  pyproject.toml
src/exify/: cli.py  utils.py
tests/: test_cli.py  test_utils.py
