[tool.poetry]
name = "exify"
version = "0.1.0"
description = ""
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
click = "^8.1.7"
rich = "^13.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
